# rlvr-docs

./: .gitattributes  Cargo.toml  LICENSE  README.md  domains.json  paper.md
docs/: architecture.md  data-source-audit.md  data-source-honesty-audit.md  datasets.md  domains.md  paper.md  simulation-engines.md  theory.md  training-protocol.md  verifiers.md
python/rlvr/: __init__.py  client.py  curriculum.py  registry.py  train.py
raw/datasets/: MANIFEST.md
src/: lib.rs  main.rs  registry.rs  server.rs
src/datasets/: gsm8k.rs  mod.rs  registry.rs
src/verifiers/: chemical_equation.rs  code_execution.rs  date_time.rs  exact_match.rs  graph_properties.rs  instruction_following.rs  json_schema.rs  math_equivalence.rs  math_numerical.rs  mod.rs  regex_synthesis.rs  sql_execution.rs  sudoku.rs  unit_conversion.rs
tests/: server_contract.rs
wiki/: index.md  log.md  overview.md
wiki/concepts/: dataset-scaling.md  reward-shaping.md  verification-types.md
wiki/domains/: 2048-game.md  24-game.md  3d-mesh-processing.md  3d-printing-gcode.md  3d-scene-understanding.md  3d-transformation-matrices.md  a-okvqa.md  abbreviation-expansion.md  abstract-algebra.md  abstract-pattern-completion.md  access-control-policy.md  accessibility-compliance.md  accounting-bookkeeping.md  acid-base-equilibrium.md  acoustic-room-simulation.md  acrobot.md  acrostic-generation.md  action-recognition-video.md  actuarial-computation.md  add-type-hints-full.md  ade20k-segmentation.md  adroit-hand.md  adult-income.md  advent-of-code-2015.md  advent-of-code-2016.md  advent-of-code-2017.md  (+2671 more)
(+18 files in other folders)
