[package]
name = "rlvr-verifiers"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
flate2 = "1"
rand = "0.8"
thiserror = "2"
wait-timeout = "0.2"

[dev-dependencies]
pretty_assertions = "1"
